--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
       .blue-color {
         color: dodgerblue;
       }
+      .card.image-full:before {
+        background-color: rgba(19, 19, 24, 0.5);
+      }
     </style>
   </head>
   <body class="font-manrope">
@@ -310,8 +313,178 @@
           </div>
         </div>
       </section>
+      <section>
+        <div
+          class="border-dotted border-y-2 border-third-color w-10/12 mx-auto"
+        >
+          <h3 class="font-bold text-4xl text-center p-8">Our Programs</h3>
+          <p
+            class="text-center text-base font-medium text-secondary-color pb-8"
+          >
+            Explore the dymanics of our different programs available for
+            different types of people.
+          </p>
+        </div>
+        <div
+          class="px-5 mx-auto lg:px-32 lg:py-8 lg:mx-auto gap-6 w-full flex flex-col lg:grid lg:grid-cols-2"
+        >
+          <div class="card bg-base-100 shadow-xl image-full w-full">
+            <figure>
+              <img class="w-full" src="Images/2.png" alt="" />
+            </figure>
+            <div class="card-body">
+              <h2 class="card-title text-white text-3xl font-extrabold pt-40">
+                Junior Program
+              </h2>
+              <p class="text-white text-base font-medium">
+                Ignite the passion for hockey in aspiring young talents
+              </p>
+              <div class="card-actions justify-start">
+                <button
+                  class="btn bg-primary-color text-xl text-white font-bold border-0"
+                >
+                  Register Now
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="card bg-base-100 shadow-xl image-full w-full">
+            <figure>
+              <img class="w-full" src="Images/3.png" alt="" />
+            </figure>
+            <div class="card-body">
+              <h2 class="card-title text-white text-3xl font-extrabold pt-40">
+                Teenager Program
+              </h2>
+              <p class="text-white text-base font-medium">
+                Elevate teenage athletes to new heights in our Teenager Program
+              </p>
+              <div class="card-actions justify-start">
+                <button
+                  class="btn bg-primary-color text-xl text-white font-bold border-0"
+                >
+                  Register Now
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="card bg-base-100 shadow-xl image-full col-span-2 w-full">
+            <figure>
+              <img class="w-full" src="Images/4.png" alt="" />
+            </figure>
+            <div class="card-body">
+              <h2 class="card-title text-white text-3xl font-extrabold pt-40">
+                Professional Program
+              </h2>
+              <p class="text-white text-base font-medium">
+                For seasoned players seeking the pinnacle of performance
+              </p>
+              <div class="card-actions justify-start">
+                <button
+                  class="btn bg-primary-color text-xl text-white font-bold border-0"
+                >
+                  Register Now
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
       <section></section>
     </main>
-    <footer></footer>
+    <footer class="mt-28">
+      <footer
+        class="footer p-5 lg:p-28 bg-black text-neutral-content lg:px-32 lg:flex lg:flex-row lg:gap-40 text-center lg:text-left"
+      >
+        <nav class="w-full lg:w-1/3">
+          <div>
+            <h1 class="text-3xl font-extrabold pb-4">Get in touch</h1>
+            <p class="text-base font-medium text-paragraph-color pb-6">
+              For inquiries, partnership opportunities, or any questions related
+              to our hockey programs, reach out to our dedicated team. We're
+              here to assist you on your journey in the world of hockey
+              excellence.
+            </p>
+            <div class="pb-5 flex justify-center lg:justify-start gap-2">
+              <img src="Images/icons/email.png" alt="" />
+              <p>Hello@gmail.com</p>
+            </div>
+            <div class="flex justify-center lg:justify-start gap-2">
+              <img src="Images/icons/call.png" alt="" />
+              <p>+91 993 863 9431</p>
+            </div>
+          </div>
+        </nav>
+        <nav
+          class="w-full lg:w-2/3 flex flex-wrap lg:flex-row text-center lg:text-left justify-center gap-16"
+        >
+          <nav class="flex flex-col flex-1 gap-3">
+            <header class="text-xl font-bold text-white pb-3">Company</header>
+            <a
+              class="link link-hover text-base font-medium text-paragraph-color"
+              >About us</a
+            >
+            <a
+              class="link link-hover text-base font-medium text-paragraph-color"
+              >Leadership</a
+            >
+            <a
+              class="link link-hover text-base font-medium text-paragraph-color"
+              >Careers</a
+            >
+            <a
+              class="link link-hover text-base font-medium text-paragraph-color"
+              >News & Article</a
+            >
+            <a
+              class="link link-hover text-base font-medium text-paragraph-color"
+              >Legal Notice</a
+            >
+          </nav>
+          <nav class="flex flex-col flex-1 gap-3">
+            <header class="text-xl font-bold text-white pb-3">Support</header>
+            <a
+              class="link link-hover text-base font-medium text-paragraph-color"
+              >Help Center</a
+            >
+            <a
+              class="link link-hover text-base font-medium text-paragraph-color"
+              >FAQ</a
+            >
+            <a
+              class="link link-hover text-base font-medium text-paragraph-color"
+              >Ticket Support</a
+            >
+            <a
+              class="link link-hover text-base font-medium text-paragraph-color"
+              >Contact Us</a
+            >
+          </nav>
+          <nav class="flex flex-col flex-1 gap-3">
+            <header class="text-xl font-bold text-white pb-3">Services</header>
+            <a
+              class="link link-hover text-base font-medium text-paragraph-color"
+              >Academy</a
+            >
+            <a
+              class="link link-hover text-base font-medium text-paragraph-color"
+              >Group Lesson</a
+            >
+            <a
+              class="link link-hover text-base font-medium text-paragraph-color"
+              >Private Lesson</a
+            >
+            <a
+              class="link link-hover text-base font-medium text-paragraph-color"
+              >Hockey for Kids</a
+            >
+            <a
+              class="link link-hover text-base font-medium text-paragraph-color"
+              >Hockey for Adults</a
+            >
+          </nav>
+        </nav>
+      </footer>
+    </footer>
   </body>
 </html>
