--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -624,6 +624,178 @@
           </div>
         </div>
       </section>
+      <!-- asdasdasdasd -->
+      <section class="mx-5 lg:px-32 lg:py-8 lg:mx-auto">
+        <div class="flex border border-gray-200 p-8">
+          <div><img src="Images/11.png" alt="" /></div>
+          <div class="flex flex-col flex-1 h-full">
+            <div class="collapse collapse-plus bg-base-200">
+              <input type="radio" name="my-accordion-3" checked="checked" />
+              <div class="collapse-title text-xl font-bold">Our equipment</div>
+              <div class="collapse-content">
+                <p>
+                  These are the equipments we use for our trainings and programs
+                </p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus bg-base-200">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-xl font-bold">
+                Hockey Training
+              </div>
+              <div class="collapse-content">
+                <p>Good hockey training, with great coaches</p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus bg-base-200">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-xl font-bold">
+                Private Lessons
+              </div>
+              <div class="collapse-content">
+                <p>We have coaches available also for private lessons</p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus bg-base-200">
+              <input type="radio" name="my-accordion-3" checked="checked" />
+              <div class="collapse-title text-xl font-bold">Ski Touring</div>
+              <div class="collapse-content">
+                <p>We also have ski touring available with us</p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus bg-base-200">
+              <input type="radio" name="my-accordion-3" checked="checked" />
+              <div class="collapse-title text-xl font-bold">Bookings</div>
+              <div class="collapse-content">
+                <p>Call this number for booking updates</p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus bg-base-200">
+              <input type="radio" name="my-accordion-3" checked="checked" />
+              <div class="collapse-title text-xl font-bold">Pricings</div>
+              <div class="collapse-content">
+                <p>Here's a detailed pricing of our services and programs</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="mt-16 w-11/12 lg:w-5/6 mx-auto">
+        <article>
+          <hr class="border border-dashed" />
+          <div class="text-center p-10 max-w-xl mx-auto">
+            <h2 class="font-extrabold text-4xl">Get In Touch</h2>
+            <p class="mt-1 text-base font-medium text-secondary-color">
+              Get in touch with us. As soon as possible. Please do. Please
+              please please. If you don't, I cry.
+            </p>
+          </div>
+          <hr class="border border-dashed" />
+        </article>
+        <div
+          class="mt-16 flex flex-col lg:flex-row justify-center items-center"
+        >
+          <div
+            class="flex flex-col gap-4 w-full lg:w-1/3 p-12 border rounded-lg"
+          >
+            <div class="bg-yellow-100 p-6 rounded-lg">
+              <img class="h-6" src="./Images/icons/call1.png" alt="call" />
+              <p class="mt-2 text-sm">Phone Number :</p>
+              <p class="mt-1 text-sm font-bold">(+62) 123-321-543</p>
+            </div>
+            <div class="bg-yellow-50 p-6 rounded-lg">
+              <img class="h-6" src="./Images/icons/email1.png" alt="call" />
+              <p class="mt-2 text-sm">Email :</p>
+              <p class="mt-1 text-sm font-bold">hockeys@support.com</p>
+            </div>
+            <div class="bg-cyan-100 p-6 rounded-lg">
+              <img class="h-6" src="./Images/icons/map.png" alt="call" />
+              <p class="mt-2 text-sm">Location :</p>
+              <p class="mt-1 text-sm font-bold">
+                152/1 Mohakhali Wireless Gate
+              </p>
+            </div>
+          </div>
+          <div class="w-full lg:w-2/3 mt-10 lg:m-0 lg:p-16">
+            <form action="#" class="grid gap-4 lg:grid-cols-2">
+              <div class="flex flex-col w-full">
+                <label class="font-bold" for="name">Your Name</label>
+                <input
+                  class="bg-gray-100 rounded-lg py-2 px-3 mt-1 text-sm"
+                  type="text"
+                  name="name"
+                  id="name"
+                  placeholder="Enter your full name"
+                />
+              </div>
+              <div class="flex flex-col">
+                <label class="font-bold" for="email">Your Email</label>
+                <input
+                  class="bg-gray-100 rounded-lg py-2 px-3 mt-1 text-sm"
+                  type="email"
+                  name="email"
+                  id="email"
+                  placeholder="Enter your email"
+                />
+              </div>
+              <div class="flex flex-col">
+                <label class="font-bold" for="subject">Subject</label>
+                <input
+                  class="bg-gray-100 rounded-lg py-2 px-3 mt-1 text-sm"
+                  type="text"
+                  name="subject"
+                  id="subject"
+                  placeholder="Enter your subject"
+                />
+              </div>
+              <div class="flex flex-col">
+                <label class="font-bold" for="phone">Your Phone</label>
+                <input
+                  class="bg-gray-100 rounded-lg py-2 px-3 mt-1 text-sm"
+                  type="text"
+                  name="phone"
+                  id="phone"
+                  placeholder="Enter your phone number"
+                />
+              </div>
+              <div class="flex flex-col lg:col-span-2">
+                <label class="font-bold" for="message">Message</label>
+                <textarea
+                  placeholder="Write Your Message."
+                  class="bg-gray-100 rounded-lg py-2 px-3 mt-1 text-sm"
+                  name="message"
+                  id="message"
+                  cols="30"
+                  rows="12"
+                ></textarea>
+              </div>
+              <button
+                class="btn lg:w-full lg:col-span-2 bg-red-500 text-white"
+                type="submit"
+              >
+                Send Message
+              </button>
+            </form>
+          </div>
+        </div>
+        <div class="text-center mt-10 p-8 bg-gray-100 rounded-lg">
+          <h2 class="font-bold">Social Media</h2>
+          <ul class="flex justify-center gap-5 mt-2">
+            <li>
+              <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-github"></i></a>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
     <footer class="mt-28">
       <footer
@@ -719,5 +891,9 @@
         </nav>
       </footer>
     </footer>
+    <script
+      src="https://kit.fontawesome.com/a193fad3af.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
