--- a/index.html
+++ b/index.html
@@ -626,9 +626,22 @@
       </section>
       <!-- asdasdasdasd -->
       <section class="mx-5 lg:px-32 lg:py-8 lg:mx-auto">
-        <div class="flex border border-gray-200 p-8">
+        <div>
+          <div
+            class="border-dotted border-y-2 border-third-color w-10/12 mx-auto"
+          >
+            <h3 class="font-bold text-4xl text-center p-8">Client Questions</h3>
+            <p
+              class="text-center text-base font-medium text-secondary-color pb-8"
+            >
+              Frequently Asked Client Questions. Check if you guys need any
+              relevant information like others do.
+            </p>
+          </div>
+        </div>
+        <div class="flex border border-gray-200 p-8 flex-col gap-1 lg:flex-row">
           <div><img src="Images/11.png" alt="" /></div>
-          <div class="flex flex-col flex-1 h-full">
+          <div class="grid gap-1 flex-grow">
             <div class="collapse collapse-plus bg-base-200">
               <input type="radio" name="my-accordion-3" checked="checked" />
               <div class="collapse-title text-xl font-bold">Our equipment</div>
