--- a/index.html
+++ b/index.html
@@ -639,7 +639,9 @@
             </p>
           </div>
         </div>
-        <div class="flex border border-gray-200 p-8 flex-col gap-1 lg:flex-row">
+        <div
+          class="flex border border-gray-200 p-8 flex-col gap-1 lg:flex-row mt-10"
+        >
           <div><img src="Images/11.png" alt="" /></div>
           <div class="grid gap-1 flex-grow">
             <div class="collapse collapse-plus bg-base-200">
